--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,7 @@ a {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(295.jpg);
+  background-image: url(295.jpg.webp);
   background-size: cover;
   color: white;
   text-align: center;
